# youtube-comment-scraper

./: config.py  main.py  pyproject.toml  trending_videos.json  youtube_comments.csv
scraper/: constant.py  extractor.py  loads.py  schema.py
